src/styles/style.scss
/* ... */
// footer
#creditContainer,
#showSettings {
	position: fixed;
	pointer-events: all;
	transition: opacity 0.4s;
}

#creditContainer {
	bottom: 0;
	left: 0;
	opacity: 0;
	padding: 0 0 36px 24px;
	max-width: 50%;
	display: flex;
	align-items: center;
	pointer-events: none;
	font-family: var(--font-family);
	font-weight: var(--font-weight);

	&.shown {
		opacity: 1;
		pointer-events: all;

		&:hover #credit .exif {
			opacity: 1;
		}
	}

	#credit {
		text-align: left;

		.exif {
			opacity: 0;
			transition: opacity 0.4s;
		}

		a,
		p,
		span {
			font-size: 13px;
			color: #fff9;
			text-decoration: none;
			transition: color 0.1s;
		}

		a:hover {
			color: #fffe;
		}
	}
}

#showSettings {
	padding: 0 24px 24px 0;
	bottom: 0;
	right: 0;
	z-index: 3;

	button {
		position: relative;
		height: 53px;
		width: 53px;
		border: none;
		border-radius: 8px;
		cursor: pointer;
		padding: unset;
		background-color: transparent;
		transition: background-color 0.6s $easeOutThree;
		@include allCentered();

		img {
			width: 65%;
			transition: transform 0.6s $easeOutThree;
			will-change: transform;
		}
	}

	&.he_hidden {
		display: flex;
		opacity: 0;

		&.shown {
			opacity: 0.5;
		}

		&:hover {
			opacity: 1;
		}
	}

	&:hover {
		img {
			transform: rotate(15deg);
		}
	}

	&.shown {
		button {
			background-color: #aaa6;
			@include frostedGlass();

			img {
				transform: rotate(60deg);
			}

			&:hover {
				opacity: 1;
				background-color: #6666;
			}
		}
	}

	&.hasUpdated:before {
		opacity: 1;
	}

	&.hasUpdated.shown:before {
		opacity: 0;
	}

	&:before {
		content: '';
		position: absolute;
		opacity: 0;
		width: 10px;
		height: 10px;
		left: 2px;
		top: 2px;
		background-color: var(--color-green);
		border-radius: 100%;
		z-index: 10;
		transition: opacity 0.3s;
	}
}

#bookmarks_container {
	position: fixed;
	display: none;
	top: 0;
	left: 0;
	height: 100vh;
	width: 100vw;
	font-size: 16px;
	opacity: 0;
	transition: opacity 0.4s;
	backdrop-filter: blur(40px) brightness(0.9);
	z-index: 4;

	&.shown {
		@keyframes animShow {
			0% {
				opacity: 0;
			}
			100% {
				opacity: 1;
			}
		}

		display: inline-flex;
		animation: animShow 0.4s forwards;
	}

	&.hiding {
		@keyframes animHide {
			0% {
				opacity: 1;
			}
			100% {
				opacity: 0;
			}
		}

		animation: animHide 0.4s forwards;
	}
}

#bookmarks,
#editlink {
	color: var(--color-text);
	background-color: var(--color-dialog);
	border: 1px solid var(--color-dialog-border);
	border-radius: 8px;

	@include frostedGlass($blur: 25px);

	hr {
		border-color: var(--color-dialog-border);
	}

	button {
		border-radius: 6px;
		border: 3px solid transparent;
		background-color: transparent;
		text-align: left;
		padding: 2px 12px;
		color: #2a2222;
		outline: none;
		cursor: pointer;

		&:focus-visible,
		&:hover {
			color: white;
			background-color: #2c7be5;

			&#e_delete,
			&:first-child {
				color: white;
				background-color: #e64b43;
			}
		}
	}
}

#bookmarks {
	margin: auto;
	padding: 1.5em;

	ol {
		margin: 0;
		padding: 0;
		max-height: 50vh;
		overflow-y: auto;
		overflow-x: hidden;
		list-style-type: none;

		li {
			position: relative;
			width: 40vw;
			max-width: 500px;
			min-width: 300px;
			margin: 10px;
			padding: 15px;
			padding-left: 3.5em;
			text-align: left;
			border-radius: 8px;
			border: 1px solid transparent;
			transition: background-color 0.05s, border-color 0.05s;
			cursor: pointer;

			&:before {
				content: '';
				position: absolute;
				top: 50%;
				left: 15px;
				width: 25px;
				height: 25px;
				border-radius: 25px;
				background-color: var(--color-blue);
				transform: translateY(-50%) scale(0.2);
				transition: transform 0.05s;
				filter: grayscale(1);
			}

			p,
			pre {
				text-overflow: ellipsis;
				white-space: nowrap;
				overflow: hidden;
			}

			p {
				line-height: 1.5em;
				font-size: 0.9em;
				font-weight: bold;

				img {
					width: 1.5em;
					height: 1.5em;
					margin-right: 0.5em;
					vertical-align: bottom;
				}
			}

			pre {
				font-size: 0.8em;
				margin: 0.4em 0 0 0;
			}

			&.selected {
				border-color: var(--color-dialog-highlight);
				background-color: var(--color-dialog-highlight);

				&:before {
					filter: none;
					transform: translateY(-50%) scale(1);
					background: var(--color-blue) no-repeat center/12px url('/src/assets/interface/checkmark.svg');
				}
			}
		}
	}

	// no bookmark warning
	h3 {
		display: none;
		color: #222d;
	}

	> div {
		display: flex;
		justify-content: space-between;
		margin: 2em 1em 0 1em;
	}

	button {
		color: #2c7be5;
		transition: filter 0.4s;

		&:first-child {
			color: #e64b43;
		}

		&#bmk_apply.none {
			pointer-events: none;
			filter: grayscale(1);
		}
	}

	&.noneFound {
		min-width: 260px;

		h3 {
			display: block;
		}

		> div {
			justify-content: center;
		}

		#bmk_apply {
			display: none;
		}
	}
}

#editlink {
	position: fixed;
	display: none;
	top: 0;
	left: 0;
	width: 220px;
	padding: 1em;
	box-shadow: 0px 0px 15px #0004;
	transform: translate(-254px, -172px);
	transition: left 0.4s;
	z-index: 4;

	&.shown {
		display: block;
	}

	&.hiding {
		opacity: 0;
		transition: opacity 0.2s, left 0.4s;
	}

	input[type='text'],
	input[type='url'] {
		color: var(--color-dialog-input-text);
		width: 100%;
		height: 2.4em;
		padding: 0 1em;
		border: 3px solid transparent;
		border-radius: 8px;
		box-sizing: border-box;
		background-color: transparent;
		transition: background-color 0.1s;
		outline: #007aff66;

		&:focus {
			color: var(--color-text);
			background-color: var(--color-dialog-highlight);
			border: 3px solid #007aff66;
			transition: background-color 0.1s;
		}
	}

	button {
		display: block;
		width: 100%;
		border-radius: 6px;
		border: 3px solid transparent;
		text-align: left;
		padding: 2px 12px;
		color: var(--color-text);
		outline: none;
		cursor: pointer;
	}
}
/* ... */

